# xenocore

./: Cargo.toml  build9x.bat  sideload9x.bat
.cargo/: config.toml
examples/: gamoid.rs  gl-triangle-arrays.rs  gl-triangle-immediate.rs
lib/: LICENSES.txt
src/: lib.rs  win32.rs
